completion of User Interface

--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,14 @@ body{
     font-family: 'Nunito', sans-serif;
     width: 100vw;
     height: 95vh;
+    background-color: whitesmoke;
+
 
 }
 .home-page{
     position: relative;
     width: inherit;
+    height: inherit;
     text-align: center;
 }
 .main-header{
@@ -37,4 +40,51 @@ body{
 }
 .main-header:hover{
     transform: translateY(-10px);
+}
+#main-section{
+    position: absolute;
+    height: 50%;
+    width: 60%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: #fff;
+    border-radius: 20px;
+    box-shadow: 2px 5px 20px rgba(0, 0, 0, 0.3);
+    text-align: center;
+
+}
+.usrInput{
+    margin-top: 80px;
+    width: 60%;
+    display: inline-block;
+    padding: 10px 30px;
+    border-radius: 5px;
+    text-align: center;
+    letter-spacing: 5px;
+}
+.btn{
+    position: inherit;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%,-50% );
+    display: block;
+    text-transform: uppercase;
+    padding: 10px 45px;
+    border-radius: 100px;
+    transition: all .2s;
+    color: #fff;
+    background-color: #000;
+    border: none;
+    letter-spacing: 2px;
+    text-align: center;
+}
+.btn:hover{
+    transform: translate(-50%,-55%);
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #000;
+}
+.btn:active{
+    transform: translate(-50%,-52%);
 }
